[package]
name = "pluginbaby"
version = "0.1.0"
authors = ["Shinya Ohyanagi <heavenshell.jp@gmail.com>"]
description = "Simple Git repository manager"
edition = "2018"

[dependencies]
better-panic = "0.*"
clap = "2.31.2"
failure = "0.*"
git2 = "0.9"
log = "0.*"
env_logger = "0.*"
serde = { version = "1.*", features = ["derive"] }
serde_yaml = "0.*"
walkdir = "2.*"

[dev-dependencies]
tempfile = "3.*"
